AC_INIT(src/libnbio.c)
AM_INIT_AUTOMAKE(libnbio, 0.10)

AC_PREFIX_DEFAULT(/usr)
AM_CONFIG_HEADER(include/config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AM_PROG_LIBTOOL

dnl LIBTOOL="$LIBTOOL --silent"

AC_ARG_ENABLE(debug,    [  --disable-debug         compile without debugging options],enable_debug=no,enable_debug=yes)

if test "$enable_debug" = yes ; then
        CFLAGS="$CFLAGS -Wall -g"
fi

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h)

AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

AC_FUNC_MEMCMP
AC_CHECK_FUNCS(gethostname gettimeofday socket strdup strstr strtol uname)

AC_SUBST(CFLAGS)

AC_OUTPUT([
	Makefile
	include/Makefile
	src/Makefile
])

