AC_INIT(src/libnbio.c)
AM_CONFIG_HEADER(include/config.h)
AM_INIT_AUTOMAKE(libnbio, 0.10)

AM_MAINTAINER_MODE

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

NB_LDADD=

AC_ARG_ENABLE(kqueue,   [  --enable-kqeue   use kqueue/kevent instead of poll], enable_kqueue=yes, enable_kqueue=no)

if test "x$enable_kqueue" = "xyes" ; then
	AC_DEFINE(NBIO_USE_KQUEUE)
fi

dnl for systems that can't decide if they need libdl or not
AC_CHECK_LIB(dl, dlopen, AP_LDADD="-ldl $NB_LDADD")
AC_SUBST(NB_LDADD)

AC_SUBST(CFLAGS)

LIBTOOL="$LIBTOOL --silent"

AC_OUTPUT([
	Makefile
	include/Makefile
	src/Makefile
])
